Fix the issue where back button does not work for Safari Try using visibility: hidden to hide radio button in iOS Chrome Disable content detection for telephone
[#174532416]

--- a/src/main/resources/static/shiba.css
+++ b/src/main/resources/static/shiba.css
@@ -170,6 +170,7 @@ html {
     -ms-appearance: none;
     -o-appearance: none;
     appearance: none;
+    visibility: hidden;
 }
 
 .inline {
